Add discount svg to the corners of the deals section

--- a/index.html
+++ b/index.html
@@ -729,7 +729,14 @@
       <div class="latest">
 
         <div class="latest1 deals">
-          <a href="#"><img src="assets/deal1.jpg" alt="photo"></a>
+          <div class="discount">
+            <div class="disc-text">
+              97% OFF
+            </div>
+          </div>
+          <div class="deal-div">
+            <a href="#"><img src="assets/deal1.jpg" alt="photo"></a>
+          </div>
           <div class="content con">
             <a href="#" class="img-text">
               <p> The Ultimate 2021 White Hat Hacker Certification Bundle</p>
@@ -739,7 +746,14 @@
         </div>
 
         <div class="latest1 deals">
-          <a href="#"><img src="assets/deal2.jpg" alt="photo"></a>
+          <div class="discount">
+            <div class="disc-text">
+              99% OFF
+            </div>
+          </div>
+          <div class="deal-div">
+            <a href="#"><img src="assets/deal2.jpg" alt="photo"></a>
+          </div>
           <div class="content con">
             <a href="#" class="img-text">
               <p>The Premium 2021 Project & Quality Management Certification Bundle</p>
@@ -749,7 +763,14 @@
         </div>
 
         <div class="latest1 deals">
-          <a href="#"><img src="assets/deal3.jpg" alt="photo"></a>
+          <div class="discount">
+            <div class="disc-text">
+              95% OFF
+            </div>
+          </div>
+          <div class="deal-div">
+            <a href="#"><img src="assets/deal3.jpg" alt="photo"></a>
+          </div>
           <div class="content con">
             <a href="#" class="img-text">
               <p> The Pro Google SEO & SERP Certification Bundle</p>
@@ -759,7 +780,14 @@
         </div>
 
         <div class="latest1 deals">
-          <a href="#"><img src="assets/deal4.jpg" alt="photo"></a>
+          <div class="discount">
+            <div class="disc-text">
+              99% OFF
+            </div>
+          </div>
+          <div class="deal-div">
+            <a href="#"><img src="assets/deal4.jpg" alt="photo"></a>
+          </div>
           <div class="content con">
             <a href="#" class="img-text">
               <p> The Complete 2021 Microsoft Azure Certification Prep Bundle</p>
@@ -769,7 +797,14 @@
         </div>
 
         <div class="latest1 deals">
-          <a href="#"><img src="assets/deal5.jpg" alt="photo"></a>
+          <div class="discount">
+            <div class="disc-text">
+              80% OFF
+            </div>
+          </div>
+          <div class="deal-div">
+            <a href="#"><img src="assets/deal5.jpg" alt="photo"></a>
+          </div>
           <div class="content con">
             <a href="#" class="img-text">
               <p> IPVanish VPN: 1-Yr Subscription</p>
@@ -779,7 +814,14 @@
         </div>
 
         <div class="latest1 deals">
-          <a href="#"><img src="assets/deal6.jpg" alt="photo"></a>
+          <div class="discount">
+            <div class="disc-text">
+              92% OFF
+            </div>
+          </div>
+          <div class="deal-div">
+            <a href="#"><img src="assets/deal6.jpg" alt="photo"></a>
+          </div>
           <div class="content con">
             <a href="#" class="img-text">
               <p>The Ultimate Logic Pro X Music Production Bundle </p>
@@ -789,7 +831,14 @@
         </div>
 
         <div class="latest1 deals">
-          <a href="#"><img src="assets/deal7.jpg" alt="photo"></a>
+          <div class="discount">
+            <div class="disc-text">
+              97% OFF
+            </div>
+          </div>
+          <div class="deal-div">
+            <a href="#"><img src="assets/deal7.jpg" alt="photo"></a>
+          </div>
           <div class="content con">
             <a href="#" class="img-text">
               <p>The 2021 Complete Microsoft Azure Certification Prep Bundle</p>
@@ -799,7 +848,14 @@
         </div>
 
         <div class="latest1 deals latest2">
-          <a href="#"><img src="assets/deal8.jpg" alt="photo"></a>
+          <div class="discount">
+            <div class="disc-text">
+              99% OFF
+            </div>
+          </div>
+          <div class="deal-div">
+            <a href="#"><img src="assets/deal8.jpg" alt="photo"></a>
+          </div>
           <div class="content con">
             <a href="#" class="img-text">
               <p> Familio Private Backup Platform: Lifetime Subscription </p>
