change the font size of head section to look more similar like the orinial

--- a/index.html
+++ b/index.html
@@ -128,14 +128,15 @@
       <h2 class="tnw">TNW</h2>
       <a title="TNW LOGO" href="#"><span class="tnw-img"></span></a>
       <p class="date"> Tuesday -- January 26, 2021</p>
-      <a href="#" class="tnw-bottom">Opal cuts off your apps’ internet access to help you stop doomscrolling</a>
+      <a href="#" class="tnw-bottom first-tnw">Opal cuts off your apps’ internet access to help you stop
+        doomscrolling</a>
       <a href="#" class="author">by Ivan Mehta <i class="far fa-clock"></i> 1 hour ago 12 <i
           class="fas fa-share-alt"></i></a>
     </div>
 
     <div class="top-right-head left-head">
       <a href="#" class="tnw-bottom">
-        <h3> Google unveils privacy-friendly AI cookie killer</h3>
+        Google unveils privacy-friendly AI cookie killer
       </a>
       <a href="#" class="author">by Tomas David <i class="far fa-clock"></i> 40 minutes ago 8 <i
           class="fas fa-share-alt"></i></a>
@@ -143,7 +144,7 @@
 
     <div class="bottom-right-head left-head">
       <a href="#" class="tnw-bottom">
-        <h3> This Mac app automatically detects your duplicate files</h3>
+        This Mac app automatically detects your duplicate files
       </a>
       <a href="#" class="author">by Ivan Mehta <i class="far fa-clock"></i> 2 hours ago 25 <i
           class="fas fa-share-alt"></i></a>
